objects/CMPL123CME__EU_MIR__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__MDR_Class_Type__c</fullName>
        <description>MDR fields set up according to proposal in EUDAMED.
The information will be attached to the UDI (Basic UDI-DI) in the UDI database, therefore it will come automatically with the Basic UDI-DI (except for custom-made device which will not have a Basic UDI-DI).</description>
        <inlineHelpText>MDR fields set up according to proposal in EUDAMED. 
The information will be attached to the UDI (Basic UDI-DI) in the UDI database, therefore it will come automatically with the Basic UDI-DI except for custom-made devices.</inlineHelpText>
        <label>MDR Class Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>CMPL123CME__MDR_Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Implantable</fullName>
                </value>
                <value>
                    <fullName>Active device</fullName>
                </value>
                <value>
                    <fullName>Intended to administer and/or remove a medicinal product</fullName>
                </value>
                <value>
                    <fullName>Sterile conditions</fullName>
                </value>
                <value>
                    <fullName>Measuring function</fullName>
                </value>
                <value>
                    <fullName>Reusable surgical instruments</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
                <value>
                    <fullName>Procedure packs</fullName>
                </value>
                <value>
                    <fullName>Custom-made</fullName>
                </value>
                <value>
                    <fullName>Non-medical purpose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__MDR_Class__c</fullName>
        <description>MDR fields set up according to proposal in EUDAMED.
The information will be attached to the UDI (Basic UDI-DI) in the UDI database, therefore it will come automatically with the Basic UDI-DI (except for custom-made device which will not have a Basic UDI-DI).</description>
        <inlineHelpText>MDR fields set up according to proposal in EUDAMED. 
The information will be attached to the UDI (Basic UDI-DI) in the UDI database, therefore it will come automatically with the Basic UDI-DI except for custom-made devices.</inlineHelpText>
        <label>MDR Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>class III</fullName>
                </value>
                <value>
                    <fullName>class IIb</fullName>
                </value>
                <value>
                    <fullName>class IIa</fullName>
                </value>
                <value>
                    <fullName>class I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Address_Complement__c</fullName>
        <description>The address where the Manufacturer is located. E.g. building name</description>
        <inlineHelpText>The address where the Manufacturer is located. E.g. building name</inlineHelpText>
        <label>Address complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_City_Name__c</fullName>
        <description>The name of the city where the manufacturer is located.</description>
        <inlineHelpText>The name of the city where the manufacturer is located.</inlineHelpText>
        <label>City name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Contact_First_Name__c</fullName>
        <description>First name of the manufacturer contact person.</description>
        <inlineHelpText>First name of the manufacturer contact person.</inlineHelpText>
        <label>Contact first name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Contact_Last_Name__c</fullName>
        <description>Last name of the manufacturer contact person.</description>
        <inlineHelpText>Last name of the manufacturer contact person.</inlineHelpText>
        <label>Contact last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Country__c</fullName>
        <description>The country where the manufacturer is located.</description>
        <inlineHelpText>The country where the manufacturer is located.</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antartica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_E_Mail__c</fullName>
        <description>E-mail of the manufacturer contact person.</description>
        <inlineHelpText>E-mail of the manufacturer contact person.</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Organisation_Name__c</fullName>
        <description>The name of the Manufacturer for the device involved in this adverse incident.</description>
        <inlineHelpText>The name of the Manufacturer for the device involved in this adverse incident.</inlineHelpText>
        <label>Manufacturer Organisation name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_P_O_Box__c</fullName>
        <description>The P.O box of the manufacturer.</description>
        <inlineHelpText>The P.O box of the manufacturer.</inlineHelpText>
        <label>P.O Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Phone__c</fullName>
        <description>Telephone number of the manufacturer contact person.</description>
        <inlineHelpText>Telephone number of the manufacturer contact person.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Postcode__c</fullName>
        <description>The postal or zip code where the manufacturer is located.</description>
        <inlineHelpText>The postal or zip code where the manufacturer is located.</inlineHelpText>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Single_Registration_Number_SRN__c</fullName>
        <description>SRN is the unique identifier which will be the unique identifier of actors in the future Eudamed. When an SRN is available, an SRN field will be completed and will pre-populate the manufacturer details, including the Manufacturer's name.</description>
        <inlineHelpText>SRN is the unique identifier which will be the unique identifier of actors in the future Eudamed. When an SRN is available, an SRN field will be completed and will pre-populate the manufacturer details, including the Manufacturer's name.</inlineHelpText>
        <label>Single Registration Number (SRN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Street_Number__c</fullName>
        <description>The street number of the manufacturer.</description>
        <inlineHelpText>The street number of the manufacturer.</inlineHelpText>
        <label>Street number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufact_Street__c</fullName>
        <description>The street of the manufacturer.</description>
        <inlineHelpText>The street of the manufacturer.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Awareness_Date__c</fullName>
        <description>Date when you were made aware of the incident.</description>
        <inlineHelpText>Date when you were made aware of the incident.</inlineHelpText>
        <label>Manufacturer awareness date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_S_FSCA_Reference_Number__c</fullName>
        <description>Manufacturer's FSCA reference number</description>
        <label>Manufacturer's FSCA reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_S_Reference_Number__c</fullName>
        <description>Manufacturer's reference number</description>
        <label>Manufacturer's reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_s_Evaluation__c</fullName>
        <description>A report of your analysis of the device involved in this event. If no analysis or investigation of the device could be carried out, for example if the device was not returned, then indicate the most probable root cause analysis. Please be clear whether you are describing the root cause or most probable root cause.
In many cases, evaluation of the actual device is not feasible. Instead the investigation may focus on "surrogate devices", i.e. devices belong to the same batch or lot as the device, to another lot/batch. Testing of model variants may also be indicated in specific cases. Please describe the devices investigated &amp; if applicable, tested-- Other investigative means than testing may include interviews with the user/operator of the device, control of production records etc. Your investigations and conclusions should be explained and their credibility and plausibility justified.
If you refer to an existing CAPA please provide the reference or identification number of that CAPA.</description>
        <inlineHelpText>A report of your analysis of the device involved in this event. If no analysis or investigation of the device could be carried out, for example if the device was not returned, then indicate the most probable root cause analysis.</inlineHelpText>
        <label>Manufacturer Evaluation Final Report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Name__c</fullName>
        <description>A name used to assist in the identification of the regulated medical device (IMDRF) - If unknown , put 'unknown' and update when you receive the information.</description>
        <inlineHelpText>A name used to assist in the identification of the regulated medical device (IMDRF) - If unknown , put 'unknown' and update when you receive the information.</inlineHelpText>
        <label>Medical device name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Nomenclature_Code__c</fullName>
        <description>Code from the terminology above.</description>
        <inlineHelpText>Code from the terminology above.</inlineHelpText>
        <label>Medical device nomenclature code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Problem_Code_Annex_A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Codes Belonging to Annexure A Medical Devices Problem Code.</description>
        <inlineHelpText>Annexure A Codes for Medical Device Problem Code.</inlineHelpText>
        <label>Medical Device Problem Code (Annex A)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Terminology_Other__c</fullName>
        <description>If the Medical Device Terminology used is Other, please specify the other Terminology.</description>
        <inlineHelpText>If the Medical Device Terminology used is Other, please specify the other Terminology.</inlineHelpText>
        <label>If Medical Device Term is Other, specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Terminology__c</fullName>
        <description>Select the code system that your organisation uses.</description>
        <inlineHelpText>Select the code system that your organisation uses.</inlineHelpText>
        <label>Medical device terminology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMDN</fullName>
                </value>
                <value>
                    <fullName>GMDN</fullName>
                </value>
                <value>
                    <fullName>UMDNS(ECRI)</fullName>
                </value>
                <value>
                    <fullName>GIVD/EDMS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Model__c</fullName>
        <description>The value used to represent one medical device or a family of medical devices to group many variations that have shared characteristics (IMDRF).</description>
        <inlineHelpText>The value used to represent one medical device or a family of medical devices to group many variations that have shared characteristics (IMDRF).</inlineHelpText>
        <label>Model</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Months_At_Time_of_Incident__c</fullName>
        <description>The age of the patient in Years or Months and Days. Months and days should only be used for patients under the age of 1. For all others please use years only.</description>
        <inlineHelpText>The age of the patient in years or months or days. Months &amp; days should only be used for patients under the age of 1. For all others please use years and months.</inlineHelpText>
        <label>Months</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NB_Certificate_Number_1__c</fullName>
        <description>Notified body (NB) certificate number(s) of device.</description>
        <inlineHelpText>Notified body (NB) certificate number(s) of device.</inlineHelpText>
        <label>NB Certificate Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NB_Certificate_Number_2__c</fullName>
        <description>Notified body (NB) certificate number(s) of device.</description>
        <inlineHelpText>Notified body (NB) certificate number(s) of device.</inlineHelpText>
        <label>NB Certificate Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NB_ID_Number1__c</fullName>
        <description>Notified body (NB) ID number(s)</description>
        <inlineHelpText>Notified body (NB) ID number(s)</inlineHelpText>
        <label>NB ID Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NB_ID_Number2__c</fullName>
        <description>Notified body (NB) ID number(s)</description>
        <inlineHelpText>Notified body (NB) ID number(s)</inlineHelpText>
        <label>NB ID Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NB_ID_Number_1__c</fullName>
        <description>Notified body (NB) ID number(s).</description>
        <inlineHelpText>Notified body (NB) ID number(s).</inlineHelpText>
        <label>NB ID Number 1(Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NB_ID_Number_2__c</fullName>
        <description>Notified body (NB) ID number(s).</description>
        <inlineHelpText>Notified body (NB) ID number(s).</inlineHelpText>
        <label>NB ID Number 2(Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NCA_S_Local_FSCA_Reference_Number__c</fullName>
        <description>NCA's local FSCA reference number</description>
        <label>NCA's local FSCA reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NCA_S_Local_Reference_Number__c</fullName>
        <description>NCA's local reference number</description>
        <label>NCA's local reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Name_Of_The_Healthcare_Facility__c</fullName>
        <description>The name of the healthcare facility where this event occurred. If this incident did not occur in a health care facility you don’t need to fill out this field.</description>
        <inlineHelpText>The name of the healthcare facility where this event occurred. If this incident did not occur in a health care facility you don’t need to fill out this field.</inlineHelpText>
        <label>Name of the healthcare facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_EEA_CH_TR_N_1__c</fullName>
        <description>Number of similar devices for the incident year for the specified  region 1 year ago (N-1).</description>
        <inlineHelpText>Number of similar devices for the incident year for the specified  region 1 year ago (N-1)</inlineHelpText>
        <label>No of devices in EEA + CH + TR (N-1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_EEA_CH_TR_N_2__c</fullName>
        <description>Number of similar devices for the incident year for the specified  region before 2 years (N-2).</description>
        <inlineHelpText>Number of similar devices for the incident year for the specified  region before 2 years (N-2).</inlineHelpText>
        <label>No of devices in EEA + CH + TR (N-2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_EEA_CH_TR_N_3__c</fullName>
        <description>Number of similar devices for the incident year for the specified  region before 3 years (N-3).</description>
        <inlineHelpText>Number of similar devices for the incident year for the specified  region before 3 years (N-3).</inlineHelpText>
        <label>No of devices in EEA + CH + TR (N-3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_EEA_CH_TR_N__c</fullName>
        <description>Number of similar devices for the incident year for the specified  region.</description>
        <inlineHelpText>Number of similar devices for the incident year for the specified  region.</inlineHelpText>
        <label>No of devices in EEA + CH + TR (N)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_Incident_Country_N_1__c</fullName>
        <description>Number of similar devices for the incident country 1 year ago (N-1).</description>
        <inlineHelpText>Number of similar devices for the incident country 1 year ago (N-1).</inlineHelpText>
        <label>No of devices in Incident country N-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_Incident_Country_N_2__c</fullName>
        <description>Number of similar devices for the incident country before 2 years (N-2).</description>
        <inlineHelpText>Number of similar devices for the incident country before 2 years (N-2).</inlineHelpText>
        <label>No of devices in Incident Country N-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_Incident_Country_N_3__c</fullName>
        <description>Number of similar devices for the incident country before 3 years (N-3).</description>
        <inlineHelpText>Number of similar devices for the incident country before 3 years (N-3).</inlineHelpText>
        <label>No of devices in Incident Country N-3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_Incident_Country_N__c</fullName>
        <description>Number of similar devices for the incident country for the incident year N.</description>
        <inlineHelpText>Number of similar devices for the incident country for the incident year N.</inlineHelpText>
        <label>No of devices in Incident country N</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_The_World_N_1__c</fullName>
        <description>Number of similar devices for the incident year in the rest of the World 1 year ago (N-1).</description>
        <inlineHelpText>Number of similar devices for the incident year in the rest of the World 1 year ago (N-1).</inlineHelpText>
        <label>No of devices in the world (N-1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_The_World_N_2__c</fullName>
        <description>Number of similar devices for the incident year in the rest of the World before 2 years (N-2).</description>
        <inlineHelpText>Number of similar devices for the incident year in the rest of the World before 2 years (N-2).</inlineHelpText>
        <label>No of devices in the world (N-2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_The_World_N_3__c</fullName>
        <description>Number of similar devices for the incident year in the rest of the World before 3 years (N-3).</description>
        <inlineHelpText>Number of similar devices for the incident year in the rest of the World before 3 years (N-3).</inlineHelpText>
        <label>No of devices in the world (N-3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Devices_In_The_World_N__c</fullName>
        <description>Number of similar devices for the incident year in the rest of the World.</description>
        <inlineHelpText>Number of similar devices for the incident year in the rest of the World.</inlineHelpText>
        <label>No of devices in the world (N)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_EEA_CH_TR_N_1__c</fullName>
        <description>Number of similar incidents for the incident year in the specified region 1 year ago (N-1).</description>
        <inlineHelpText>Number of similar incidents for the incident year in the specified region 1 year ago (N-1).</inlineHelpText>
        <label>No of incidents in EEA + CH + TR (N-1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_EEA_CH_TR_N_2__c</fullName>
        <description>Number of similar incidents for the incident year in the specified region before 2 years (N-2).</description>
        <inlineHelpText>Number of similar incidents for the incident year in the specified region before 2 years (N-2).</inlineHelpText>
        <label>No of incidents in EEA + CH + TR (N-2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_EEA_CH_TR_N_3__c</fullName>
        <description>Number of similar incidents for the incident year in the specified region before 3 years (N-3).</description>
        <inlineHelpText>Number of similar incidents for the incident year in the specified region before 3 years (N-3).</inlineHelpText>
        <label>No of incidents in EEA + CH + TR (N-3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_EEA_CH_TR_N__c</fullName>
        <description>Number of similar incidents for the incident year in the specified region.</description>
        <inlineHelpText>Number of similar incidents for the incident year in the specified region.</inlineHelpText>
        <label>No of incidents in EEA + CH + TR (N)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_Incident_Country_N_1__c</fullName>
        <description>Number of similar incidents for the incident country 1 year ago (N-1).</description>
        <inlineHelpText>Number of similar incidents for the incident country 1 year ago (N-1).</inlineHelpText>
        <label>No of incidents in Incident Country N-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_Incident_Country_N_2__c</fullName>
        <description>Number of similar incidents for the incident country before 2 years (N-2).</description>
        <inlineHelpText>Number of similar incidents for the incident country before 2 years (N-2).</inlineHelpText>
        <label>No of incidents in Incident Country N-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_Incident_Country_N_3__c</fullName>
        <description>Number of similar incidents for the incident country before 3 years (N-3).</description>
        <inlineHelpText>Number of similar incidents for the incident country before 3 years (N-3).</inlineHelpText>
        <label>No of incidents in Incident Country N-3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_Incident_Country_N__c</fullName>
        <description>Number of similar incidents for the incident country for the incident year N.</description>
        <inlineHelpText>Number of similar incidents for the incident country for the incident year N.</inlineHelpText>
        <label>No of incidents in Incident country N</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_Rest_Of_The_World_N__c</fullName>
        <description>Number of similar incidents for the incident year in the rest of the World.</description>
        <inlineHelpText>Number of similar incidents for the incident year in the rest of the World.</inlineHelpText>
        <label>No of incidents in rest of the world (N)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_The_World_N_1__c</fullName>
        <description>Number of similar incidents for the incident year in the rest of the World 1 year ago (N-1).</description>
        <inlineHelpText>Number of similar incidents for the incident year in the rest of the World 1 year ago (N-1).</inlineHelpText>
        <label>No of incidents in the world (N-1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_The_World_N_2__c</fullName>
        <description>Number of similar incidents for the incident year in the rest of the World before 2 years (N-2).</description>
        <inlineHelpText>Number of similar incidents for the incident year in the rest of the World before 2 years (N-2).</inlineHelpText>
        <label>No of incidents in the world (N-2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_Of_Incidents_In_The_World_N_3__c</fullName>
        <description>Number of similar incidents for the incident year in the rest of the World before 3 years (N-3).</description>
        <inlineHelpText>Number of similar incidents for the incident year in the rest of the World before 3 years (N-3).</inlineHelpText>
        <label>No of incidents in the world (N-3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_Of_Days__c</fullName>
        <description>Duration of implantation in patient in days.</description>
        <inlineHelpText>Duration of implantation (days).</inlineHelpText>
        <label>Number of Days</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_Of_Months__c</fullName>
        <description>Duration of implantation in patient in months.</description>
        <inlineHelpText>Duration of implantation (months).</inlineHelpText>
        <label>Number of Months</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_Of_Patients_Involved__c</fullName>
        <description>The number of patients involved.</description>
        <inlineHelpText>The number of patients involved.</inlineHelpText>
        <label>Number Of Patients Involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_Of_Years__c</fullName>
        <description>Duration of implantation in patient in years.</description>
        <inlineHelpText>Duration of implantation (years).</inlineHelpText>
        <label>Number of Years</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Org_Name_Of_Authorised_Representative__c</fullName>
        <description>The name of the Authorised representative for the device involved in this adverse incident.</description>
        <inlineHelpText>The name of the Authorised representative for the device involved in this adverse incident.</inlineHelpText>
        <label>Org. Name of Authorised Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Countries_If_Any__c</fullName>
        <description>Other Countries (if any).</description>
        <label>Other Countries (if any)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>